--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,10 +1,13 @@
 name: appcenter_example
 description: Demonstrates how to use the appcenter plugin.
 
+environment:
+  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.0
+  cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
