--- a/src/appcenter/android/build.gradle
+++ b/src/appcenter/android/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.1.0'
     }
 }
 
@@ -26,12 +26,12 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -40,7 +40,7 @@ android {
         disable 'InvalidPackage'
     }
     dependencies {
-        def appCenterSdkVersion = '1.1.0'
-        compile "com.microsoft.appcenter:appcenter:${appCenterSdkVersion}"
+        def appCenterSdkVersion = '1.10.0'
+        implementation "com.microsoft.appcenter:appcenter:${appCenterSdkVersion}"
     }
 }
