--- a/src/appcenter_analytics/pubspec.yaml
+++ b/src/appcenter_analytics/pubspec.yaml
@@ -1,7 +1,9 @@
 name: appcenter_analytics
 description: Visual Studio App Center (Analytics) plugin for Flutter applications.
-version: 0.2.0
-author: Aloïs Deniel<alois.deniel@outlook.com>
+version: 0.2.1
+authors: 
+  - Aloïs Deniel<alois.deniel@outlook.com>
+  - Damien Aicheh<damien.aicheh@gmail.com>
 homepage: https://github.com/aloisdeniel/flutter_plugin_appcenter
 
 environment:
