--- a/src/appcenter_analytics/.gitignore
+++ b/src/appcenter_analytics/.gitignore
@@ -1,9 +1,37 @@
+.idea/
+.vagrant/
+.sconsign.dblite
+.svn/
+
 .DS_Store
-.atom/
-.idea
-.packages
-.pub/
+*.swp
+profile
+
+DerivedData/
 build/
-ios/.generated/
-packages
-pubspec.lock
+GeneratedPluginRegistrant.h
+GeneratedPluginRegistrant.m
+
+.generated/
+
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+
+!default.pbxuser
+!default.mode1v3
+!default.mode2v3
+!default.perspectivev3
+
+xcuserdata
+
+*.moved-aside
+
+*.pyc
+*sync/
+Icon?
+.tags*
+
+/Flutter/Generated.xcconfig
+/Flutter/flutter_export_environment.sh
