--- a/src/appcenter/android/src/main/AndroidManifest.xml
+++ b/src/appcenter/android/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.yourcompany.appcenter">
+    <meta-data android:name="flutterEmbedding" android:value="2"/>
 </manifest>
