--- a/src/appcenter_analytics/pubspec.yaml
+++ b/src/appcenter_analytics/pubspec.yaml
@@ -7,7 +7,7 @@ authors:
 homepage: https://github.com/aloisdeniel/flutter_plugin_appcenter
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   
 dependencies:
   flutter:
